--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pushpendersingh/react-native-scanner": "^1.5.0",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-picker/picker": "^2.11.0",
@@ -19,6 +20,8 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-fs": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-permissions": "^5.4.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
