--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@pushpendersingh/react-native-scanner": "^1.5.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-clipboard/clipboard": "^1.16.2",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
@@ -29,7 +31,8 @@
     "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0",
     "vcard-js": "^1.2.2",
-    "vcards-js": "^2.10.0"
+    "vcards-js": "^2.10.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
