--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.513.0",
     "react": "19.0.0",
     "react-native": "0.79.3",
+    "react-native-audio-recorder-player": "^3.6.12",
     "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.1",
