--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 <uses-permission android:name="android.permission.VIBRATE"/>
 <uses-permission android:name="android.permission.CAMERA" />
 <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-
+<uses-permission android:minSdkVersion="34" android:name="android.permission.USE_EXACT_ALARM" />
 
 <uses-feature android:name="android.hardware.camera.any" />
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="28" />
