--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,10 +12,18 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+    classpath 'com.google.gms:google-services:4.4.2'
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin")
     }
 }
-
+allprojects {
+     repositories {
+        maven {
+         // react-native-background-fetch
+         url("${project(':react-native-background-fetch').projectDir}/libs")
+               }
+     }
+}
 apply plugin: "com.facebook.react.rootproject"
