--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-camera-roll/camera-roll": "^7.10.0",
     "@react-native-clipboard/clipboard": "^1.16.2",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/firestore": "^22.2.1",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
@@ -22,6 +24,8 @@
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-audio-recorder-player": "^3.6.12",
+    "react-native-background-actions": "^4.0.1",
+    "react-native-background-fetch": "^4.2.8",
     "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.4.1",
